Add new exceptions and added new business validations